--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "dependencies": {
         "prom-client": "^14.2.0",
         "substreams": "0.5.x",
-        "substreams-sink": "0.2.x"
+        "substreams-sink": "0.2.x",
+        "substreams-sink-prometheus": "^0.4.3"
     },
     "devDependencies": {
         "@types/node": "*",
