--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
         "pkg": "ncc build bin/cli.ts -o build && pkg build/index.js"
     },
     "dependencies": {
-        "prom-client": "^14.2.0",
         "substreams": "0.5.x",
         "substreams-sink": "0.2.x",
-        "substreams-sink-prometheus": "^0.4.3"
+        "substreams-sink-prometheus": "0.4.x"
     },
     "devDependencies": {
         "@types/node": "*",
