--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@vercel/ncc": "0.36.x",
         "pkg": "latest",
         "tsup": "latest",
-        "typescript": "latest"
+        "typescript": "latest",
+        "tsx": "latest"
     }
 }
