[PINAX-200] catch up with substreams-sync

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Substreams VictoriaMetrics sink module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "type": "module",
     "bin": {
         "substreams-sink-victoria-metrics": "dist/bin/cli.js"
     },
@@ -41,7 +42,7 @@
     },
     "dependencies": {
         "substreams": "0.7.x",
-        "substreams-sink": "0.4.x",
+        "substreams-sink": "0.6.x",
         "substreams-sink-prometheus": "0.5.x"
     },
     "devDependencies": {
