--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,11 @@ jobs:
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
-      - run: npm run pkg
+      - run: npm run linux
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: softprops/action-gh-release@v1
         with:
           files: |
-            *-x64
-            *-arm64
-            *-x64.exe
+            *-linux
